feat: make spacy model configurable
BREAKING CHANGE: expose util instead of the functions it contains when
importing identifyPropositions.

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,6 @@ exclude = .env,*.egg-info,dist
 
 [tool:pytest]
 addopts = --cov=identifyPropositions --cov-fail-under=100 --cov-report html --cov-report term -v
+
+[syllogio-identifyPropositions]
+model_name = en_core_web_sm
